Use virtual threads, build with jdk 19